content/blog/gateway/tmp.yml
## hex, gateway-bbin168, Gateway (gateway.networking.k8s.io) has been added:
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-bbin168
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - allowedRoutes:
      kinds:
      - kind: HTTPRoute
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      kinds:
      - kind: HTTPRoute
    name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: hall-vir888-com-20251125
---
## hex, gateway-bbin168, HTTPRoute (gateway.networking.k8s.io) has been added:
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-bbin168
spec:
  hostnames:
  - hall.vir888.com
  parentRefs:
  - name: gateway-bbin168
  rules:
  - backendRefs:
    - name: hall-nginx-proxy-ci-neg
      port: 80
    filters:
    - requestHeaderModifier:
        add:
        - name: Site-Server-Alias
          value: bbin168
      type: RequestHeaderModifier
    matches:
    - path:
        type: PathPrefix
        value: /
